syntax = "proto3";
package dipstick.device.v1;

import "dipstick/core/v1/entity.proto";
import "dipstick/device/v1/action.proto";
import "dipstick/device/v1/ina2xx.proto";
import "dipstick/device/v1/sensor.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

message DeviceEntity {
  dipstick.core.v1.EntityMeta meta = 1;
  DeviceSpec spec = 2;
  DeviceStatus status = 3;
}

message DeviceStatus {
  map<string, google.protobuf.Value> attrs = 1;
  map<string, ActionStatus> actions = 2;
  map<string, SensorStatus> sensors = 3;
}

message DeviceSpec {
  google.protobuf.Duration poll_interval = 2;
  oneof device_spec_variant {
    Ina2xxSpec ina2xx = 1;
  }
}

message DeviceEvent {
  oneof device_event_variant {
    ActionEvent action = 1;
    SensorEvent sensor = 2;
  }
}
